cmake_minimum_required(VERSION 3.13)
project(address C)

set (CMAKE_C_STANDARD 90)

add_executable(main153 Chapter-01/1.5.3.c)
add_executable(main154 Chapter-01/1.5.4.c)
add_executable(main162 Chapter-01/1.6.2.c)
add_executable(main163 Chapter-01/1.6.3.c)
add_executable(main17 Chapter-01/1.7.c)
add_executable(main18 Chapter-01/1.8.c)
add_executable(main19 Chapter-01/1.9.c)

add_executable(main251 Chapter-02/2.5.1.c)
add_executable(main254 Chapter-02/2.5.4.c)

add_executable(main362 Chapter-03/3.6.2.c)
add_executable(main39 Chapter-03/3.9.c)
add_executable(main312 Chapter-03/3.12.c)
add_executable(main314 Chapter-03/3.14.c)

add_executable(main43 Chapter-04/4.3.c)
add_executable(main48 Chapter-04/4.8.c)
add_executable(main49 Chapter-04/4.9.c)

add_executable(mainp5fopen y/p5-fopen.c)
add_executable(mainp8getc y/p8-fgetc.c)
add_executable(mainp8getccount y/p8-fgetccount.c)
add_executable(mainp9gets y/p9-gets.c)
add_executable(mainp9fread y/p9-fread.c)